2006-12-26 [colin]	2.6.1cvs76

	* src/folder.c
	* src/folderview.c
	* src/imap.c
	* src/statusbar.c
	* src/etpan/imap-thread.c
		Fix previous commit warnings
		Make statusbar update every second if total < 20
		Make IMAP APPEND faster by simplifying log		

2006-12-26 [colin]	2.6.1cvs75

	* src/folder.c
	* src/folder.h
	* src/folderview.c
	* src/folderview.h
	* src/imap_gtk.c
	* src/mh_gtk.c
		Make it possible to copy folders accross
		mailboxes (this was an arbitrary limitation).
		Still make it impossible to move folders 
		accross mailboxes.

2006-12-26 [colin]	2.6.1cvs74

	* src/etpan/imap-thread.c
		Fix bug 1081, 'claws-mail 
		segfaults when going offline 
		while it transfers mails via 
		imap'

2006-12-26 [colin]	2.6.1cvs73

	* src/folder_item_prefs.c
		Don't forget alt dictionary when
		renaming/moving folders

2006-12-26 [wwp]	2.6.1cvs72

	* src/folder_item_prefs.c
		Add missing defaults for per-folder alt dict
		(forgotten in 2.6.1cvs61).

2006-12-26 [colin]	2.6.1cvs71

	* src/wizard.c
		Add tooltip to state that specifying
		full path to mailbox is possible

2006-12-26 [wwp]	2.6.1cvs70

	* src/partial_download.c
	* src/gtk/gtkvscrollbutton.c
	* src/plugins/pgpinline/plugin.c
		Fix for few compiler warnings that matter.

2006-12-25 [colin]	2.6.1cvs69

	* src/partial_download.c
		Fix marking for download or deletion
		when the header isn't the first
	* src/gtk/logwindow.c
		Fix start of scrolling

2006-12-23 [paul]	2.6.1cvs68

	* src/compose.c
		change last commit to use the 'academic'
		method instead. Thanks to wwp

2006-12-23 [paul]	2.6.1cvs67

	* src/compose.c
		don't warn about empty subject when
		redirecting

2006-12-22 [colin]	2.6.1cvs66

	* src/summary_search.c
		Fix previous patch

2006-12-22 [colin]	2.6.1cvs65

	* src/gtk/gtkutils.c
	* src/imap.c
	* src/jpilot.c
	* src/summary_search.c
		A few warning fixes

2006-12-23 [paul]	

	2.7.0-rc2 released

2006-12-22 [colin]	2.6.1cvs64

	* src/toolbar.c
	* src/toolbar.h