@@ -1,3 +1,8 @@
+2006-12-26 [colin]	2.6.1cvs77
+
+	* src/statusbar.c
+		Revert previous patch
+
 2006-12-26 [colin]	2.6.1cvs76
 
 	* src/folder.c
